# Cloudflare-DDNS-Python

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: cloudflare.py  config.py  main.py  scheduler.py  speedtest.py
